# tetrics

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.dev  HOWTO_KEYCLOAK.md  Jenkinsfile  README.md  SONARQUBE.md  TEST.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  sonar-project.properties
.github/agents/: designer.agent.md  fixer.agent.md  implementer.agent.md  orchestrator.agent.md
.github/skills/design/: SKILL.md
.github/skills/mocktest/: SKILL.md
.github/skills/normaltest/: SKILL.md
.sonarlint/: connectedMode.json
alembic/: env.py
alembic/versions/: 498dde8da588_initial_database_schema.py  a67544ca8007_add_ecosystem_and_validity_fields.py
alembic/versions_backup/: 1a21ef2e0fc8_initial_migration_with_simplified_.py  33e7713440a5_add_aggregation_strategy_to_evaluation_.py  4edd1d6e7244_add_total_score_to_llm_tool_.py  83ed51f560f8_make_measurement_metric_id_non_nullable.py  a89ea2981e0f_change_metric_unit_to_enum_percent_.py  d112fa2eac01_refactor_llm_tool_configuration_remove_.py
app/: main.py
app/api/: __init__.py
app/api/v1/: router.py
app/api/v1/endpoints/: aggregated_scores.py  evaluation_criteria.py  evaluation_programs.py  goals.py  llm_tool_configurations.py  measurements.py  metrics.py  users.py
app/config/: database.py  logging.py  security.py  settings.py
app/core/: auth.py  exceptions.py  logging.py  middleware.py
app/models/: __init__.py  base.py  user.py
app/models/domain/: __init__.py  aggregated_score.py  constants.py  enums.py  evaluation_criterion.py  evaluation_program.py  goal.py  llm_tool_configuration.py  measurement.py  metric.py
app/repositories/: __init__.py  aggregated_score.py  base_repository.py  evaluation_criterion.py  evaluation_program.py  goal.py  llm_tool_configuration.py  measurement.py  metric.py  user.py
app/schemas/: __init__.py  aggregated_score.py  base.py  evaluation_criterion.py  evaluation_program.py  goal.py  llm_tool_configuration.py  measurement.py  metric.py  user.py
app/services/: __init__.py  base.py  conftest.py  score_aggregation.py  task.py  test_score_aggregation.py  user.py
app/utils/: database.py
front/: .env.local  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
front/docs/: blueprint.md
front/src/: middleware.ts
front/src/app/: globals.css  layout.tsx  page.tsx
front/src/contexts/: auth-context.tsx
front/src/lib/: api.ts  auth.ts  data.ts
keycloak-config/: lks-realm.json  tetrics-realm.json
scripts/: add_refactoring_goal.py  get_token.py  init-db.sql  init.sh  init.sql  run-sonar-analysis.sh
(+24 files in other folders)
